<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_height="50dip"
		android:layout_width="fill_parent" android:id="@+id/LinearLayout02"
		android:background="@drawable/bottom_bar_bg">
		<TextView android:layout_height="wrap_content" android:text="[ Series Name ]"
			android:id="@+id/TextViewEpisodeName" android:layout_gravity="center"
			android:textStyle="bold" android:gravity="center"
			android:layout_width="fill_parent" android:textSize="20dip"></TextView>
	</LinearLayout>
	<ScrollView android:id="@+id/ScrollViewRoot"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:padding="5dip">
			<LinearLayout android:layout_height="wrap_content"
				android:id="@+id/LinearLayoutSeriesHeader" android:layout_width="fill_parent">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="3" android:layout_gravity="center"
					android:gravity="center">
					<LinearLayout android:layout_height="wrap_content"
						android:layout_marginTop="10dip" android:layout_marginBottom="10dip"
						android:background="@drawable/rounded" android:padding="10dip"
						android:layout_gravity="center" android:layout_width="wrap_content">
						<ImageView android:id="@+id/ImageViewEpisodeBanner"
							android:scaleType="fitCenter" android:layout_height="wrap_content"
							android:layout_width="wrap_content"></ImageView>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<TextView android:layout_width="wrap_content"
				android:id="@+id/TextViewEpisodeRatingLabel" android:textStyle="bold"
				android:textSize="18dip" android:text="@string/episode_rating"
				android:layout_height="wrap_content">
			</TextView>
			<RatingBar android:layout_height="wrap_content"
			 	android:layout_marginTop="5dip"
				android:id="@+id/RatingBarEpisodeRating" android:max="10"
				android:stepSize="1" android:layout_width="wrap_content"
				android:numStars="10" android:isIndicator="true"
				style="?android:attr/ratingBarStyleSmall">
			</RatingBar>

			<TextView android:layout_width="wrap_content"
				android:id="@+id/TextViewEpisodeReleaseLabel" android:textStyle="bold"
				android:textSize="18dip" android:text="@string/episode_firstaired"
				android:layout_height="wrap_content" android:layout_marginTop="10dip"></TextView>
			<TextView android:layout_width="fill_parent" android:text="@+id/TextView02"
				android:layout_marginRight="10dip" android:id="@+id/TextViewEpisodeFirstAired"
				android:layout_height="wrap_content"></TextView>
			<TextView android:layout_width="wrap_content"
				android:id="@+id/TextViewEpisodeRuntimeLabel" android:textStyle="bold"
				android:layout_marginTop="10dip" android:textSize="18dip"
				android:text="@string/series_runtime" android:layout_height="wrap_content"></TextView>
			<TextView android:layout_width="fill_parent" android:text="@+id/TextView02"
				android:layout_marginRight="10dip" android:id="@+id/TextViewEpisodeRuntime"
				android:layout_height="wrap_content">
			</TextView>
			<TextView android:layout_height="wrap_content"
				android:id="@+id/TextViewEpisodeOverview" android:layout_marginTop="20dip"
				android:layout_width="fill_parent"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/episode_gueststars"
				android:textStyle="bold" android:layout_marginBottom="10dip"
				android:layout_marginTop="10dip"
				android:textSize="18dip" android:id="@+id/TextViewEpisodeActorsLabel"></TextView>

			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/LinearLayoutActors"></LinearLayout>

			<TextView android:layout_height="wrap_content" android:id="@+id/TextViewEpisodeActors"
				android:layout_width="fill_parent"
				android:layout_marginRight="10dip"></TextView>


		</LinearLayout>

	</ScrollView>
</LinearLayout>